# bevy-lightyear-template

./: .gitignore  .gitignorecommit  .gitmodules  .nvim.lua  .prettierrc  .rgignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  TODO.md  VISION.md  abilities.patch
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  doc-analyzer.md  doc-locator.md  thoughts-analyzer.md  thoughts-locator.md  web-search-researcher.md
.claude/commands/: create_plan.md  debug.md  implementation_plan.md  research_codebase.md  spec:implement.md  spec:plan.md  spec:research.md  spec:review.md  spec:validate.md  validate_plan.md
assets/: abilities.manifest.ron  abilities.ron  character.aseprite  default.ability_slots.ron  models.manifest.ron  objects.manifest.ron  terrain.manifest.ron
assets/abilities/: barrier.ability.ron  blink_strike.ability.ron  dash.ability.ron  dive_kick.ability.ron  fireball.ability.ron  ground_pound.ability.ron  jump.ability.ron  punch.ability.ron  punch2.ability.ron  punch3.ability.ron  shield_bash.ability.ron  shockwave.ability.ron  speed_burst.ability.ron  teleport_burst.ability.ron  uppercut.ability.ron
assets/objects/: stump_circle.object.ron  tree_circle.object.ron
assets/rigs/: humanoid.rig.ron
assets/shaders/: shadow_only.wgsl  sprite_rig_billboard.wgsl
assets/terrain/: arena_hills.terrain.ron  homebase.terrain.ron  overworld.terrain.ron
certificates/: generate.sh
crates/client/: Cargo.toml
crates/client/src/: diagnostics.rs  gameplay.rs  lib.rs  main.rs  map.rs  map_transition.rs  network.rs  transition.rs  world_object.rs
crates/client/tests/: chunk_sync.rs  connection.rs  map_transition.rs  messages.rs  plugin.rs
crates/client_lightyear/: Cargo.toml
crates/client_lightyear/src/: connection.rs  lib.rs  netcode.rs  webtransport.rs
crates/client_web_lightyear/: Cargo.toml
crates/dev/: Cargo.toml
crates/persistence/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: ability.rs  app_state.rs  diagnostics.rs  hit_detection.rs  lib.rs  map.rs  physics.rs  test_utils.rs
crates/protocol/src/ability/: activation.rs  effects.rs  lifecycle.rs  loader.rs  loading.rs  mod.rs  plugin.rs  spawn.rs  types.rs
crates/protocol/src/billboard/: mod.rs  shadow_only_material.rs
crates/protocol/src/character/: mod.rs  movement.rs  types.rs
crates/protocol/src/hit_detection/: effects.rs  layers.rs  mod.rs  systems.rs
crates/protocol/src/map/: chunk.rs  colliders.rs  mod.rs  persistence.rs  transition.rs  types.rs  voxel.rs
crates/protocol/src/terrain/: loader.rs  loading.rs  mod.rs  plugin.rs  registry.rs  types.rs
crates/protocol/src/transition/: mod.rs  plugin.rs  relocation.rs  types.rs
crates/protocol/src/vox_model/: ignore_loader.rs  loader.rs  loading.rs  lod.rs  manifest.rs  meshing.rs  mod.rs  plugin.rs
crates/protocol/src/world_object/: loader.rs  loading.rs  mod.rs  plugin.rs  registry.rs  spawn.rs  types.rs
crates/protocol/tests/: ability_systems.rs  physics_isolation.rs
crates/render/: Cargo.toml
crates/render/src/: camera.rs  health_bar.rs  lib.rs
crates/render/tests/: render_plugin.rs
crates/server/: Cargo.toml
crates/server/src/: chunk_entities.rs  diagnostics.rs  gameplay.rs  lib.rs  main.rs  map.rs  map_transition.rs  network.rs  persistence.rs  transition.rs  world_object.rs
crates/server/src/persistence/: fs_map_entities.rs  fs_map_meta.rs  mod.rs
crates/server/tests/: connection_flow.rs  integration.rs  map_transition.rs  multi_transport.rs  observers.rs  plugin.rs  rooms.rs  voxel_persistence.rs  world_persistence.rs
crates/server_lightyear/: Cargo.toml
crates/server_lightyear/src/: connection.rs  lib.rs  netcode.rs  webtransport.rs
crates/sprite_rig/: Cargo.toml
crates/ui/: Cargo.toml
crates/voxel_map_engine/: Cargo.toml
crates/web/: Cargo.toml  index.html
crates/web/src/: lib.rs  main.rs  network.rs
crates/web/tests/: plugin.rs  wasm_integration.rs
doc/: dependency-search.md  subagent-overview.md
doc/bug/: 2026-03-28-ability-anim-overrides-legs.md  2026-03-28-client-initial-load-lag.md  2026-04-05-trees-in-homebase.md  2026-04-14-map-transition-failures.md
doc/design/: 2026-02-13-ability-effect-primitives.md
doc/plans/: 2025-11-18-lightyear-multi-crate-setup.md  2025-11-23-testing-infrastructure-implementation.md  2025-11-24-network-plugin-refactoring.md  2025-11-27-render-crate-camera-setup.md  2025-11-28-ui-crate-and-client-state.md  2025-12-13-fresh-netcode-on-connect.md  2025-12-24-voxel-map-plugins.md  2025-12-31-crossbeam-transport-integration-tests.md  2026-01-04-transform-based-chunk-visibility.md  2026-01-18-voxel-world-persistence.md  2026-01-31-webtransport-configuration.md  2026-02-07-ability-system.md  2026-02-14-hit-detection-knockback.md  2026-02-16-health-respawn-billboard-ui.md  2026-02-21-ability-effect-primitives.md  2026-02-21-ability-entity-foundation.md  2026-02-22-ability-effect-primitives-phases-2-7.md  2026-02-25-ability-slots-hot-reload-asset.md  2026-02-26-replace-oncast-with-ontick.md  2026-02-28-voxel-map-engine.md  2026-03-03-physics-isolation-map-transitions.md  2026-03-07-map-instance-physics-isolation-and-switching.md  2026-03-08-sprite-rig-animation-system.md  2026-03-09-map-as-directory-saving.md  2026-03-11-bevy-0.18-migration.md  2026-03-14-world-object-ron-assets.md  2026-03-17-protocol-module-split.md  2026-03-18-vox-model-loading-pipeline.md  2026-03-19-procedural-map-generation.md  2026-03-21-chunk-ticket-system.md  2026-03-22-camera-rotation-q-e-lerp.md  2026-03-22-chunk-pipeline-optimizations.md
doc/research/: 2025-09-30-sonic-battle-chao-design-research.md  2025-11-22-testing-infrastructure-patterns.md  2025-11-24-network-plugin-refactoring.md  2025-11-28-ui-crate-and-client-state.md  2025-12-07-game-world-loading-validated.md  2025-12-13-netcode-token-expired-fix.md  2025-12-24-bevy-voxel-world-map-plugins.md  2025-12-31-crossbeam-clientserverstepper-integration.md  2026-01-17-voxel-world-save-load.md  (+36 more)
scripts/: setup.sh
(+125 files in other folders)
