[workspace]
members = [
    "crates/protocol",
    "crates/client",
    "crates/server",
    "crates/web",
    "crates/render",
    "crates/ui",
]
resolver = "2"

[workspace.dependencies]
avian3d = { version = "0.4.1", default-features = false, features = ["3d", "f32", "parry-f32", "default-collider"] }
bevy = { version = "0.17.2", default-features = false }
leafwing-input-manager = "0.19"
lightyear = { version = "0.25.5", features = ["leafwing"] }
protocol = { path = "crates/protocol" }
serde = "1.0"

# WASM-specific dependencies
wasm-bindgen = "=0.2.105"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Test dependencies
approx = "0.5.1"
mock_instant = "0.6"
test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }

# Add profile optimizations for faster test execution
[profile.test]
opt-level = 1
debug = true

# WASM-specific test profile: optimize for size and reduce memory usage
[profile.wasm-test]
inherits = "test"
opt-level = "s"              # Size optimization
codegen-units = 1            # Sequential compilation to reduce RAM
debug = false                # No debug info to save memory
strip = true                 # Strip symbols
lto = "thin"                 # Thin LTO for smaller binary

[profile.dev.package."*"]
opt-level = 3
