[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, default-features = true }
lightyear = { workspace = true, features = ["client", "netcode", "udp", "crossbeam", "webtransport"] }
protocol = { workspace = true }
render = { path = "../render" }
anyhow = "1.0"

[dev-dependencies]
approx = { workspace = true }
mock_instant = { workspace = true }
test-log = { workspace = true }
protocol = { workspace = true, features = ["test_utils"] }
