[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, default-features = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["client", "netcode", "udp", "crossbeam", "webtransport", "leafwing", "prediction", "replication", "interpolation" ] }
protocol = { workspace = true }
render = { path = "../render" }
ui = { path = "../ui" }
anyhow = "1.0"

[dev-dependencies]
approx = { workspace = true }
mock_instant = { workspace = true }
test-log = { workspace = true }
protocol = { workspace = true, features = ["test_utils"] }
