[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
default = ["file_watcher"]
file_watcher = ["bevy/file_watcher"]
tracy = ["bevy/trace_tracy", "tracy-client/enable"]

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, default-features = true }
voxel_map_engine = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["client", "netcode", "leafwing", "prediction", "replication", "interpolation" ] }
client_lightyear = { workspace = true }
protocol = { workspace = true }
render = { path = "../render" }
ui = { path = "../ui" }
dev = { path = "../dev" }
anyhow = "1.0"
tracy-client = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
mock_instant = { workspace = true }
test-log = { workspace = true }
protocol = { workspace = true, features = ["test_utils"] }
