[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[features]
test_utils = ["dep:lightyear_transport"]

[dependencies]
bevy = { workspace = true }
lightyear = { workspace = true }
lightyear_transport = { version = "0.25.5", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
lightyear_transport = "0.25.5"
