[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[features]
test_utils = ["dep:lightyear_transport"]

[dependencies]
avian3d = { workspace = true, features = ["serialize"] }
bevy = { workspace = true, features = ["bevy_color"] }
bevy_voxel_world = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["avian3d", "leafwing"] }
lightyear_transport = { version = "0.25.5", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
lightyear_transport = "0.25.5"
