[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[features]
test_utils = []

[dependencies]
avian3d = { workspace = true, features = ["serialize"] }
bevy = { workspace = true, features = ["bevy_color", "bevy_state", "bevy_asset"] }
voxel_map_engine = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["avian3d", "leafwing"] }
ron = { workspace = true }
bevy_common_assets = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = { workspace = true, features = ["bevy_color", "bevy_state", "bevy_mesh", "bevy_asset"] }
lightyear_replication = { workspace = true }
serde_json = "1.0"
