[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, default-features = true }
bevy_voxel_world = { workspace = true }
leafwing-input-manager = { workspace = true }
lightyear = { workspace = true, features = ["server", "netcode", "udp", "webtransport", "websocket", "leafwing", "replication" ] }
lightyear_crossbeam = "0.25.5"
protocol = { workspace = true }
anyhow = "1.0"
avian3d = { workspace = true }
bincode = "1.3"
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
mock_instant = { workspace = true }
test-log = { workspace = true }
protocol = { workspace = true, features = ["test_utils"] }
client = { path = "../client" }
ui = { path = "../ui" }
lightyear_crossbeam = "0.25.5"
lightyear_raw_connection = { version = "0.25.5", features = ["client", "server"] }
